Update builders so we can run build in RAM